--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets/images/favicon.png">   
+ 	<title>Aceros Chilca</title>
+  <link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+	<script 
+  src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+  id="sap-ui-bootstrap"
+  data-sap-ui-theme="sap_belize"
+  data-sap-ui-libs="sap.m"
+  data-sap-ui-compatVersion="edge"   
+  data-sap-ui-preload="true"
+  data-sap-ui-resourceroots='{"sap.ui.app01": "./"}'>
+  </script>
+  <script>
+     sap.ui.getCore().attachInit(function () {
+           app : new sap.ui.core.ComponentContainer({
+              name : "sap.ui.app01",
+              height : "100%"
+        }).placeAt("content");
+     });
+  </script>
 </head>
-<body>
-	<h1>Prueba</h1>
-	
+<body class="sapUiBody" id="content">
 </body>
 </html>
